Add an iOS module running core's map with mocked data (#26)
* Add an iOS module running core's map with mocked data

core needed zero changes to get here - it's already fully platform-
agnostic (GdxAdapter/DataRepository take a PlatformInterface and plain
model objects, no Android imports anywhere in that chain). What this
adds is a RoboVM/MobiVM :ios module and a mock data layer standing in
for what the Android app normally gets from a real registered account
via CoreFragment's Bundle args (net.artux.pda.ios.mock.*), since
there's no login/registration/network layer here.

Everything short of an actual device build/run was verified without
Xcode (only Command Line Tools were installed while writing this -
see ios/README.md for exactly what was checked and what wasn't, and
the remaining steps once Xcode is set up):
- MobiVM gradle plugin resolves and applies (:ios:tasks)
- Every class in this module compiles against the real robovm-rt/
  robovm-cocoatouch/gdx-backend-robovm/gdx-controllers-ios jars
  (:ios:compileJava) - so every import, constructor and method call
  here is real, not guessed
- gdx-platform/gdx-box2d-platform/gdx-freetype-platform resolve a
  natives-ios classifier, and inspecting those jars directly showed
  gdx 1.12.1 ships them as prebuilt .xcframeworks with their own
  bundled robovm.xml fragment (auto-merged by the plugin) rather than
  raw .a libs, which the initial robovm.xml (modeled on older
  templates) got wrong - fixed
- :ios:robovmInstall gets past config parsing, resource bundling and
  compilation, and only fails at code signing (no provisioning
  profile/signing identity for net.artux.pda) - which needs an actual
  Xcode + Apple Developer account to resolve, so that's where this
  stops for now
- Along the way, fixed <arch>thumbv7:arm64</arch> (not a valid single
  enum value; robovm.xml wants one arch, and thumbv7 is 32-bit anyway,
  meaningless on any iOS device still supported) to plain <arch>arm64</arch>

Co-Authored-By: Claude S